src/objects/PACV_Questions__c.object
<CustomObject>
    <fields>
        <fullName>Delegated_To_Email__c</fullName>
        <label>Delegated To Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delegated_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PACV_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PACV_Answering_Method__c</fullName>
        <description>Radio Button Objective Answering</description>
        <label>Answering Method</label>
        <picklist>
            <picklistValues>
                <fullName>Radio Button Objective Answering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checkbox Objective Answering</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PACV_Answers__c</fullName>
        <inlineHelpText>Please enter the values separated by semi-colon.</inlineHelpText>
        <label>Answers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PACV_Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PACV_Question_Status__c</fullName>
        <label>Question Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PACV_Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PACV_Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>PACV_Risk_Assessment_Questionnaire__c</referenceTo>
        <relationshipLabel>PACV Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PACV_Scores__c</fullName>
        <inlineHelpText>Please enter the values separated by semi-colon.</inlineHelpText>
        <label>Scores</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PACV_Weightage__c</fullName>
        <label>Weightage %</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>PACV Questions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PACV_Question__c</columns>
        <columns>PACV_Answering_Method__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PACV Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PACV_IsAnsweringMethodEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(PACV_Answering_Method__c, &apos;None&apos;)</errorConditionFormula>
        <errorDisplayField>PACV_Answering_Method__c</errorDisplayField>
        <errorMessage>Please select the answering method</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PACV_IsAnswersEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PACV_Answers__c)</errorConditionFormula>
        <errorDisplayField>PACV_Answers__c</errorDisplayField>
        <errorMessage>Please enter the answers with comma separated .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PACV_IsHelpTextEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PACV_Help_Text__c)</errorConditionFormula>
        <errorDisplayField>PACV_Help_Text__c</errorDisplayField>
        <errorMessage>Please enter the help text</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PACV_IsQuestionEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PACV_Question__c)</errorConditionFormula>
        <errorDisplayField>PACV_Question__c</errorDisplayField>
        <errorMessage>Please enter the question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PACV_IsScoresEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PACV_Scores__c)</errorConditionFormula>
        <errorDisplayField>PACV_Scores__c</errorDisplayField>
        <errorMessage>Please enter the scores with comma separated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PACV_IsWeightageEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(PACV_Weightage__c)</errorConditionFormula>
        <errorDisplayField>PACV_Weightage__c</errorDisplayField>
        <errorMessage>Please enter the weightage percentage</errorMessage>
    </validationRules>
</CustomObject>